--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,7 +15,7 @@ on:
           uses: actions/checkout@v3
 
         - name: Set up JDK 19
-          uses: actions/checkout@v3
+          uses: actions/setup-java@v3
           with:
             java-version: '19'
             distributed: 'temurin'
